Dizem düzeni geliştirildi
Dizem düzeninde "r" ayırtgacı kullanılmaktaydı. Şimdi SAYI-SAYI kullanılarak aynı iş yaptırılmaktadır. Bununla ilgili SCSS ve belletiler güncellendi.

--- a/assets/deveb-s1n0/_kap-orgusu.scss
+++ b/assets/deveb-s1n0/_kap-orgusu.scss
@@ -417,7 +417,7 @@ $p: 24; // parça düzeni ayarı
   $i: 1;
   @while $i <= $p {
       $genişlik: 100% / $i;
-      [data-#{$görüntülük}~="#{$i}r"] > div {
+      [data-#{$görüntülük}~="#{$i}-#{$i}"] > div {
           width: #{$genişlik}; max-width: #{$genişlik};
       }      
       $i: $i + 1;
